Updated common view of News and Deals screens

--- a/Application/Prototype/SadkoProto/SadkoProto/Resources/Scripts/News.plist
+++ b/Application/Prototype/SadkoProto/SadkoProto/Resources/Scripts/News.plist
@@ -8,9 +8,177 @@
 			<key>picture</key>
 			<string>news.png</string>
 			<key>title</key>
-			<string></string>
+			<string>График работы сети &quot;Садко&quot; 23 февраля и 8 марта</string>
 			<key>description</key>
-			<string></string>
+			<string>Уважаемые пациенты! Обращаем Ваше внимание на изменения в режиме работы сети клиник &quot;Садко&quot; в праздничные дни.
+
+23 февраля сеть клиник &quot;Садко&quot; работает до с 9.00 до 18.00
+
+8 марта сеть клиник &quot;Садко&quot; работает с 8.00 до 16.00
+
+Приятных Вам выходных!</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>Динозубрик - гость CRAZY PARK!</string>
+			<key>description</key>
+			<string>15-16 февраля 2014 г. свой День рождения отмечала «хозяйка» семейного развлекательного центра CRAZY PARK – коровка Крейзика! Детская стоматология «Динозубрик» выступила в качестве партнера праздника – Динозубрик стал гостем мероприятия, лично поздравил именинницу и всех пришедших ребят и их родителей!
+
+Ежегодно веселая любимица всех детишек коровка Крейзика приглашает своих друзей на яркий праздник.
+
+Маленькие гости торжества принимали активное участие в театрализованном представлении и самых разнообразных конкурсах, в том числе и на лучшую открытку для именинницы!
+
+Никто из ребят не остался без внимания и подарков от детской стоматологии «Динозубрик». А победители конкурса на лучшее поздравление коровки Крейзики получили главный приз от Динозубрика - рюкзачки с очень полезным наполнением, в которое входили блокнот, тетрадь, ростомер и подарочная карта для родителей на 3000 рублей. Эту сумму мамы и папы смогут потратить на лечение своего малыша в детской стоматологии «Динозубрик» на ул. Родионова, 199! </string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>Секреты естественных реставраций и ослепительной улыбки из первых уст</string>
+			<key>description</key>
+			<string>Команда керамистов зуботехнической лаборатории «САДКО» приняла участие в частном курсе ортопеда и зубного техника доктора Эдварда Макларена, который прошел в сердце Лос-Анджелеса.
+
+В чем секрет ослепительной Голливудской улыбки? Ответ на этот вопрос наши специалисты получили у самого узнаваемого ортопеда и техника в Калифорнии доктора Эдварда Макларена. Частный курс, организованный специально для нашей команды, прошел в сердце Лос-Анджелеса в лаборатории “Art Oral”.
+
+                 
+
+Участники ознакомились и применили на практике уникальную авторскую методику наложения керамики, которая позволяет изготавливать коронки, виниры, керамические чипы, которые просто невозможно отличить от естественных зубов. Особое внимание было уделено методике определения цвета, которая в том числе включает в себя и цифровые технологии.
+
+По результатам курса доктор Эдвард Макларен высоко оценил мастерство керамистов лаборатории «САДКО», особо отметив естественность изготовленных ими образцов.
+
+Также наши специалисты посетили стоматологический факультет крупнейшего университета в Калифорнии UCLA, где смогли ознакомиться с дополнительными образовательными программами для стоматологов и зубных техников.</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>День рождения Лечебно-диагностичекого центра «Садко»</string>
+			<key>description</key>
+			<string>9 февраля свой День рождения отметил Лечебно-диагностический центр «Садко» на Родионова, масштабный медицинский центр нового поколения, в котором есть все необходимое для комплексной диагностики, лечения и профилактики различных заболеваний.
+
+Клиника «Садко» на Родионова – это медицинский центр, оснащенный по последнему слову техники, с собственной лабораторией, в которой осуществляется свыше 1000 видов анализов!
+
+Также в Лечебно-диагностическом центре &quot;Садко&quot; на Родионова работает уникальный Центр женского здоровья, где врачи- гинекологи, энокринологи, маммологи, кардиологи, неврологи, гастроэнтерологи и терапевты каждый день помогают жителям нашего города сохранять и поддерживать здоровье!
+
+ Поздравляем Лечебно-диагностический центр с Днем рождения и благодарим наших пациентов за оказанное доверие!
+
+ Записаться на прием в Лечебно-диагностический центр на ул. Родионова, 199 Вы можете по тел.: (831)  4-120-555</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>День ортопедии и эстетики в Учебном центре &quot;Садко&quot;</string>
+			<key>description</key>
+			<string>1 февраля 2014 г. состоялся учебный курс по эстетике для стоматологов-ортопедов сети клиник «Садко». Лектором выступил ведущий специалист, врач стоматолог-ортопед Шихалев Павел Николаевич.
+
+Эстетическая стоматология — особое направление стоматологического искусства, задачей которого является внешнее преобразование улыбки.
+
+На сегодняшний день наши пациенты стремятся не просто вылечить зубы, но и хотят стать счастливыми обладателями ровной белоснежной улыбки, которая с момента применения инновационных методик и технологий в области реставрации зубов, становится своеобразной точкой отсчета новой жизни.
+
+Эстетическая стоматология «Садко» — это работа ведущих специалистов - хирургов, пародонтологов, ортодонтов и ортопедов клиники для получения великолепного эстетического результата в рамках программы комплексной реставрации улыбки.
+
+Современная арт-стоматология включает в себя революционные технологии и неограниченные возможности материалов последнего поколения, которые способны скорректировать форму улыбки, изменить форму конкретного зуба и достичь совершенства цвета!</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>Семинар &quot;Лечение заболеваний пародонта в комплексной реабилитации стоматологических больных&quot;</string>
+			<key>description</key>
+			<string>18 января 2014 года в Санкт-Петербурге прошел семинар для стоматологов-терапевтов «Лечение заболеваний пародонта в комплексной реабилитации стоматологических больных».
+
+В обучающем курсе приняла участие Калягина Екатерина Михайловна, врач стоматолог-терапевт Центра развития стоматологии «Садко».
+
+Семинар был посвящен вопросам организации и планирования лечения заболеваний пародонта, рентгенодиагностике и постановке диагноза. Также специалисты обсудили взаимосвязь пародонтита с системными и стоматологическими заболеваниями. Лекционную и практическую части вела Шторина Галина Борисовна, стоматолог-терапевт с опытом работы более 40 лет.
+
+Особое внимание в рамках лекционных и практических занятиях было уделено малоинвазивным операциям с применением диодного лазера.
+
+Диодный лазер позволяет работать с мягкими тканями (лечение заболеваний пародонта, хирургические манипуляции, имплантация), а также проводить терапевтические манипуляции (снятие чувствительности зубов, отбеливание, стерилизация тканей зуба).
+
+ Лечение зубов лазером в «Садко» - это: 
+
+Полное отсутствие дискомфорта (обработка производится лазерным лучом без применения бора - нет шума и вибрации);
+
+Обладая высокими антибактериальными свойствами, лазер устраняет кровоточивость десен пациента, а также ускоряет заживление.
+
+Лазерное лечение совершенно безболезненно. Во многих случаях отпадает необходимость применения анестезии.
+
+При препарировании полости, стоматологический лазер избирательно воздействует на инфицированные кариесом ткани, не затрагивая здоровые ткани.
+
+Стоматологический лазер бережно воздействует на зубы, уничтожает только кариозную ткань, не повреждая здоровую.
+
+В сети клиник «Садко» Вы можете пройти лечение на диодном лазере американской фирмы BIOLASE.</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>Татьянин день и праздник всех студентов в Академии &quot;Царство любви&quot;!</string>
+			<key>description</key>
+			<string>25 января 2014 г. Татьянин день и традиционный праздник всех студентов встретили и в Академии отцовства и материнства &quot;Царство любви&quot;! Праздничная встреча была посвящена интересной и очень важной теме для каждой будущей мамы - восстановлению после родов.
+
+Ни для кого ни секрет, что в период беременности происходят значительные изменения практически во всех системах женского организма. В минувшую субботу специалисты физиотерапевтического комплекса &quot;Садко&quot; рассказали о том, как быстро и эффективно восстановить силы, энергию и тонус после беременности и родов!
+
+В который раз руководитель Академии отцовства и материнства &quot;Царство любви&quot; Татьяна Петровна Голованова подарила своим &quot;студентам&quot; и гостям мероприятия яркий праздник! </string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>Школа ортодонтии Ormco — высший уровень подготовки специалистов!</string>
+			<key>description</key>
+			<string>C 20 по 23 января 2014 г. в Москве прошел 2 уровень подготовки специалистов в области ортодонтии на базе Школы ортодонтии Ormco. В семинарах курса приняла участие доктор высшей квалификационной категории - Краснокутская Наталья Станиславовна. 
+
+Всемирно известный американский производитель ортодонтической аппаратуры - корпорация Ormco — на протяжении уже нескольких лет стремится поддерживать специалистов в области ортодонтии и повышать качество применения продукции на территории России. Компанией Ormco была создана беспрецедентная система поддержки докторов, которая включает несколько обширных обучающих циклов. 
+
+
+
+В рамках программы Школы ортодонтии Ormco как начинающие, так и опытные специалисты имеют:
+- возможность участия в семинарах, вебинарах и конференциях;
+- возможность «он-лайн» консультаций, обсуждения плана и тактики лечения с ведущими экспертами и многое другое.
+
+С 20 по 23 января в Москве состоялись 4 семинара в рамках 2го уровня подготовки врачей-ортодонтов. Занятия включали изучение теоретического материала, а также детальный разбор реальных клинических случаев.
+
+Программа курса включала:
+
+Семинар 1: Сопротивление скольжению в ортодонтической практике. Пассивное самолигирование и традиционное лигирование. Планирование лечения с применением Damon System.
+
+Семинар 2: Разбор планов лечения. Грамотный подбор аппаратуры для наиболее эффективного лечения. Пропись брекетов: что нужно знать, чтобы быть полноправным хозяином лечения. Торк: углубленный анализ. Точная и надежная фиксация брекетов: наиболее важные нюансы. 
+
+Семинар 3: Этапы лечения Damon System. От первой дуги до ретенции.
+
+Семинар 4: Детализирующие изгибы первого, второго и третьего порядка: теория и практика. Особенности лечения с удалением отдельных зубов: выбор плана, механика, возможные ошибки и проблемы. </string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>День рождения Академии отцовства и материнства «Царство любви»</string>
+			<key>description</key>
+			<string>11 января 2014 года Академия отцовства и материнства «Царство любви» отпраздновала свой День рождения! Уже в течение 7 лет преподаватели Академии готовят наших студентов к самому сложному и ответственному событию в жизни — рождению ребенка!
+
+Академия отцовства и материнства «Царство любви» - это уникальные курсы для беременных, которые состоят из 9 авторских занятий. Каждый этап подготовки к рождению малыша учтен, начиная с выбора роддома и заканчивая профилактикой послеродовой депрессии. За весь период обучения будущая мама узнает об изменениях, которые будут происходить с её организмом, о подготовке к родам, о таинствах наречения имени и крещения. Преподаватели обучают будущих мам приемам лечебной физкультуры и дыхательной гимнастике.
+
+Мы также поздравляем с праздником руководителя Академии - Голованову Татьяну Петровну, опытного психолога и просто очень внимательного, открытого и располагающего к себе человека!
+
+Записаться на занятия в Академию отцовства и материнства «Царство любви» Вы можете                                       по телефону: (831) 4-120-777.</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>news.png</string>
+			<key>title</key>
+			<string>Нобелевская премия-2013 в области физиологии и медицины</string>
+			<key>description</key>
+			<string>27 ноября 1895 г. известный изобретатель, промышленник и инженер Альфред Нобель написал завещание, ставшее отправной точкой в истории Нобелевской премии. В документе Альфред Нобель распорядился о создании «фонда, проценты с которого будут выдаваться в виде премии тем, кто в течение предшествующего года принес наибольшую пользу человечеству». Указанные проценты, в соответствии с завещанием, делятся на пять равных частей, которые предназначаются для поощрения открытий в области физики, химии, физиологии или медицины, литературы и особый вклад в дело мира.
+
+
+
+Первые премии были присуждены ученым и деятелям искусства в 1901 году.
+
+Самая первая премия в области медицины была вручена немецкому врачу, имя которого Эмиль Адольф фон Беринг. Ученый был отмечен столь высокой наградой за исследование дифтерии. Последующие несколько премий в данной номинации также были присуждены за значимые достижения и открытия в конкретных заболеваниях. Так, в 1902 г. индийский врач Рональд Росс награжден за успехи в изучении малярии, а в 1905 г. немецкий микробиолог Генрих Роберт Кох отмечен за открытия, касающиеся лечения туберкулеза.</string>
 		</dict>
 	</array>
 	<key>deals</key>
@@ -19,9 +187,149 @@
 			<key>picture</key>
 			<string>deal.png</string>
 			<key>title</key>
-			<string></string>
+			<string>10 000 рублей в подарок от «САДКО»</string>
 			<key>description</key>
-			<string></string>
+			<string>Запишитесь на консультацию - получите подарок!
+
+С 16 января по 8 марта действует специальное предложение для новых пациентов сети клиник &quot;САДКО&quot;.
+
+При первом обращении в стоматологию  «Садко» Вы получаете ПОДАРОК  - сертификат на сумму 10 000 рублей, которую Вы можете потратить на лечение зубов!
+
+Внимание!
+Последний день активации подарочной карты - 8 марта!  
+
+Акция беспрецедентна и проводится впервые!
+
+Для того, чтобы мы смогли подобрать для Вас удобное свободное время, мы просим оформлять все записи к стоматологу ЗАРАНЕЕ!</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>deal.png</string>
+			<key>title</key>
+			<string>&quot;Садко&quot; детям! Акция детской стоматологии &quot;Динозубрик&quot; - подарочная карта 3000 руб.!</string>
+			<key>description</key>
+			<string>Уважаемые пациенты! В честь Дня Рождения Динозубрика действует специальное предложение для наших гостей в возрасте до 14 лет!
+
+Только с 12 февраля по 31 марта 2014 г. - запишитесь на консультацию и получите подарок!
+При обращении в детскую стоматологию «Динозубрик» на ул. Родионова, 199  Вы, как сопровождающий маленького пациента,  получаете подарочную карту номиналом 3000 рублей. Эту сумму Вы можете потратить на любой вид стоматологического лечения ребенка!</string>
+		</dict>
+		<dict>
+			<key>picture</key>
+			<string>deal.png</string>
+			<key>title</key>
+			<string>Расписание игровой комнаты &quot;Динозубрик&quot; на февраль 2014 года</string>
+			<key>description</key>
+			<string>01.02.2014
+
+Оригинальная поделка &quot;Снежное дерево&quot;
+
+02.02.2014
+
+Оригинальтная поделка &quot;Снежное дерево&quot;
+
+03.02.2014
+
+Оригинальная поделка &quot;Снежное дерево&quot;
+
+04.02.2014
+
+Аппликация в технике &quot;Квиллинг&quot;
+
+05.02.2014
+
+Аппликация в технике &quot;Квиллинг&quot;
+
+06.02.2014
+
+День Российской науки. Аппликация &quot;Планеты солнечной системы&quot;
+
+07.02.2014
+
+Аппликация &quot;Планеты солнечной системы&quot;
+
+08.02.2014
+
+Аппликация &quot;Планеты солнечной системы&quot;
+
+09.02.2014
+
+День стоматолога. Поделка &quot;Счастливые зубики&quot;
+
+10.02.2014
+
+День стоматолога. Поделка &quot;Счастливые зубики&quot;
+
+11.02.2014
+
+День стоматолога. Поделка &quot;Счастливые зубики&quot;
+
+12.02.2014
+
+Оригинальные открытки-валентинки
+
+13.02.2014
+
+Оригинальные открытки-валентинки
+
+14.02.2014
+
+День Святого Валентина. Открытки-валентинки
+
+15.02.2014
+
+Рисуем красками. Раскрашиваем солнышко из гипса
+
+16.02.2014
+
+Рисуем красками. Раскрашиваем солнышко из гипса
+
+17.02.2014
+
+День доброты! Рисуем красками. Раскрашиваем солнышко из гипса
+
+18.02.2014
+
+Поделка 3D аквариум
+
+19.02.2014
+
+День защиты китов. Делаем 3D аквариум
+
+20.02.2014
+
+Масленица! Мастерская по росписи тарелочек
+
+21.02.2014
+
+Мастерская по росписи тарелочек
+
+22.02.2014
+
+Готовимся к 23 февраля. Делаем открытки-рубашки
+
+23.02.2014
+
+День защитника Отечества! Открытки-рубашки
+
+24.02.2014
+
+Рисуем пальчиковыми красками портрет папы
+
+25.02.2014
+
+Рисуем пальчиковыми красками портрет папы
+
+26.02.2014
+
+День рождения Динозубрика! Поделка &quot;Одень Динозубрика на праздник&quot;! 
+
+27.02.2014
+
+День рождения Динозубрика! Открытки-поделки
+
+28.02.2014
+
+День рождения Динозубрика! Открытки-поделки</string>
 		</dict>
 	</array>
 </dict>
