--- a/Application/Prototype/SadkoProto/SadkoProto/Resources/Scripts/FAQ.plist
+++ b/Application/Prototype/SadkoProto/SadkoProto/Resources/Scripts/FAQ.plist
@@ -7,44 +7,76 @@
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
+		<key>picture</key>
+		<string>faq.png</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
 		<string>Вот в чем вопрос</string>
 	</dict>
 	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
+		<key>question</key>
+		<string>Быть или не быть?</string>
+		<key>answer</key>
+		<string>Вот в чем вопрос</string>
+	</dict>
+	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
+		<key>question</key>
+		<string>Быть или не быть?</string>
+		<key>answer</key>
+		<string>Вот в чем вопрос</string>
+	</dict>
+	<dict>
+		<key>picture</key>
+		<string>faq.png</string>
 		<key>question</key>
 		<string>Быть или не быть?</string>
 		<key>answer</key>
