--- a/Application/Prototype/SadkoProto/SadkoProto/Resources/Scripts/Clinics.plist
+++ b/Application/Prototype/SadkoProto/SadkoProto/Resources/Scripts/Clinics.plist
@@ -77,6 +77,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Ковалев</string>
 				<key>first</key>
@@ -95,6 +97,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Пужак</string>
 				<key>first</key>
@@ -113,6 +117,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Горева</string>
 				<key>first</key>
@@ -130,6 +136,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Рацюк</string>
 				<key>first</key>
@@ -148,6 +156,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Аскерова</string>
 				<key>first</key>
@@ -165,6 +175,29 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
+				<key>last</key>
+				<string>Бакланов</string>
+				<key>first</key>
+				<string>Николай</string>
+				<key>middle</key>
+				<string>Николаевич</string>
+				<key>speciality</key>
+				<string>Пародонтолог</string>
+				<key>resume</key>
+				<string>2004 г. - окончил Нижегородскую государственную медицинскую академию по специальности «Стоматология»
+2004-2005 гг.- интернатура на базе МЛПУ «Стоматологическая поликлиника Ленинского района»
+2005 г. - сертификационный курс «Стоматология»
+2007 г. - специализация по направлению: «Хирургическая стоматология»</string>
+				<key>picture</key>
+				<string>avatar.png</string>
+				<key>time</key>
+				<string>с 9:00 до 18:00</string>
+			</dict>
+			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Бакланов</string>
 				<key>first</key>
@@ -184,25 +217,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
-				<key>last</key>
-				<string>Бакланов</string>
-				<key>first</key>
-				<string>Максим</string>
-				<key>middle</key>
-				<string>Владимирович</string>
-				<key>speciality</key>
-				<string>Пародонтолог</string>
-				<key>resume</key>
-				<string>2004 г. - окончил Нижегородскую государственную медицинскую академию по специальности «Стоматология»
-2004-2005 гг.- интернатура на базе МЛПУ «Стоматологическая поликлиника Ленинского района»
-2005 г. - сертификационный курс «Стоматология»
-2007 г. - специализация по направлению: «Хирургическая стоматология»</string>
-				<key>picture</key>
-				<string>avatar.png</string>
-				<key>time</key>
-				<string>с 9:00 до 18:00</string>
-			</dict>
-			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Селезнева</string>
 				<key>first</key>
@@ -221,6 +237,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Буяло</string>
 				<key>first</key>
@@ -240,6 +258,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Катина</string>
 				<key>first</key>
@@ -485,6 +505,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Ковалев</string>
 				<key>first</key>
@@ -503,6 +525,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Пужак</string>
 				<key>first</key>
@@ -521,6 +545,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Горева</string>
 				<key>first</key>
@@ -538,6 +564,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Рацюк</string>
 				<key>first</key>
@@ -556,6 +584,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Аскерова</string>
 				<key>first</key>
@@ -573,6 +603,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Бакланов</string>
 				<key>first</key>
@@ -592,6 +624,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Бакланов</string>
 				<key>first</key>
@@ -611,6 +645,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Селезнева</string>
 				<key>first</key>
@@ -629,6 +665,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Буяло</string>
 				<key>first</key>
@@ -648,6 +686,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Катина</string>
 				<key>first</key>
@@ -844,6 +884,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Алексеева</string>
 				<key>first</key>
@@ -878,6 +920,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Гадалова</string>
 				<key>first</key>
@@ -914,6 +958,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Гошадзе</string>
 				<key>first</key>
@@ -942,6 +988,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Ефремова</string>
 				<key>first</key>
@@ -968,6 +1016,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Зюзина</string>
 				<key>first</key>
@@ -998,6 +1048,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Кожакова</string>
 				<key>first</key>
@@ -1032,6 +1084,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Козенкова</string>
 				<key>first</key>
@@ -1062,6 +1116,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Литерный</string>
 				<key>first</key>
@@ -1086,6 +1142,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Макарова</string>
 				<key>first</key>
@@ -1114,6 +1172,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Покровская</string>
 				<key>first</key>
@@ -1330,6 +1390,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Александров</string>
 				<key>first</key>
@@ -1355,6 +1417,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Алексеева</string>
 				<key>first</key>
@@ -1389,6 +1453,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Антонова</string>
 				<key>first</key>
@@ -1417,6 +1483,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Афанасьева</string>
 				<key>first</key>
@@ -1441,6 +1509,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Бахметьев</string>
 				<key>first</key>
@@ -1477,6 +1547,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Березина</string>
 				<key>first</key>
@@ -1503,6 +1575,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Валдаев</string>
 				<key>first</key>
@@ -1525,6 +1599,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Ванцинова</string>
 				<key>first</key>
@@ -1549,6 +1625,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Вопилов</string>
 				<key>first</key>
@@ -1569,6 +1647,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Закхеина</string>
 				<key>first</key>
@@ -1751,6 +1831,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Бердникова</string>
 				<key>first</key>
@@ -1769,6 +1851,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Емельянова</string>
 				<key>first</key>
@@ -1798,6 +1882,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Ивашкина</string>
 				<key>first</key>
@@ -1822,6 +1908,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Карпачев</string>
 				<key>first</key>
@@ -1840,6 +1928,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Куприянова</string>
 				<key>first</key>
@@ -1862,6 +1952,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Максакова</string>
 				<key>first</key>
@@ -1882,6 +1974,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Осминина</string>
 				<key>first</key>
@@ -1912,6 +2006,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Отмахова</string>
 				<key>first</key>
@@ -2096,6 +2192,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Белоусова</string>
 				<key>first</key>
@@ -2120,6 +2218,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Ващанов</string>
 				<key>first</key>
@@ -2140,6 +2240,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Гаврилова</string>
 				<key>first</key>
@@ -2162,6 +2264,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Дворянчикова</string>
 				<key>first</key>
@@ -2182,6 +2286,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Ивашов</string>
 				<key>first</key>
@@ -2213,6 +2319,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Кузьмичева</string>
 				<key>first</key>
@@ -2233,6 +2341,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Курочкина</string>
 				<key>first</key>
@@ -2253,6 +2363,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Курсакова</string>
 				<key>first</key>
@@ -2283,6 +2395,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Ладыгина</string>
 				<key>first</key>
@@ -2305,6 +2419,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Турушкина</string>
 				<key>first</key>
@@ -2524,6 +2640,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Александров</string>
 				<key>first</key>
@@ -2549,6 +2667,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Алексеева</string>
 				<key>first</key>
@@ -2577,6 +2697,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Антонова</string>
 				<key>first</key>
@@ -2605,6 +2727,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>1</integer>
 				<key>last</key>
 				<string>Бахметьев</string>
 				<key>first</key>
@@ -2627,6 +2751,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Волкова</string>
 				<key>first</key>
@@ -2649,6 +2775,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>2</integer>
 				<key>last</key>
 				<string>Голованова</string>
 				<key>first</key>
@@ -2667,6 +2795,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Горькова</string>
 				<key>first</key>
@@ -2691,6 +2821,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>3</integer>
 				<key>last</key>
 				<string>Грачев</string>
 				<key>first</key>
@@ -2719,6 +2851,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Громова</string>
 				<key>first</key>
@@ -2743,6 +2877,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Ершов</string>
 				<key>first</key>
@@ -2892,6 +3028,8 @@
 		<key>docs</key>
 		<array>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Фоголева</string>
 				<key>first</key>
@@ -2916,6 +3054,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Азизова</string>
 				<key>first</key>
@@ -2932,6 +3072,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Андреюк</string>
 				<key>first</key>
@@ -2954,6 +3096,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Баранова</string>
 				<key>first</key>
@@ -2972,6 +3116,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Башурова</string>
 				<key>first</key>
@@ -2990,6 +3136,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Береснева</string>
 				<key>first</key>
@@ -3006,6 +3154,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Вагина</string>
 				<key>first</key>
@@ -3032,6 +3182,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Венедиктова</string>
 				<key>first</key>
@@ -3060,6 +3212,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Воронина</string>
 				<key>first</key>
@@ -3086,6 +3240,8 @@
 				<string>с 9:00 до 18:00</string>
 			</dict>
 			<dict>
+				<key>branch</key>
+				<integer>0</integer>
 				<key>last</key>
 				<string>Карпович</string>
 				<key>first</key>
